# customgpt-cookbook

./: .gitignore  LICENSE  README.md  SDK_Create_Bot_By_Sitemap.ipynb  SDK_Create_bot_from_file.ipynb  SDK_Delete_a_project.ipynb  SDK_Delete_a_project_page.ipynb  SDK_Get_Project_Stats.ipynb  SDK_List_all_projects_using_pagination.ipynb  SDK_Update_a_project_name.ipynb  SDK_Update_project_sharing_and_get_project_share_link,_embed_code_and_chat_js_code.ipynb  requirements.txt
OpenAPI/: README.md  openapi.json
customgpt-cli/: DOCKER.md  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
customgpt-cli/customgpt_cli/: cli.py  openapi.json
customgpt-cli/tests/: test_citations.sh  test_conversations.sh  test_limits.sh  test_page_metadata.sh  test_pages.sh  test_plugins.sh  test_project_settings.sh  test_projects.sh  test_reports.sh  test_sources.sh  test_user.sh
examples/: Add_a_file_to_an_existing_project.ipynb  Add_a_sitemap_to_an_existing_project.ipynb  Create_Bot_By_File.ipynb  Create_Bot_By_Sitemap.ipynb  Create_a_new_conversation_and_send_a_message_to_the_conversation.ipynb  Delete_a_page_from_the_project.ipynb  Delete_a_project.ipynb  GetAndUpdatePageMetadata.ipynb  Get_Citation_File.ipynb  Get_Project_Stats.ipynb  Get_Settings_for_a_particular_project.ipynb  Get_citation_details.ipynb  List_all_pages_of_a_project.ipynb  List_all_projects_for_an_account_with_pagination.ipynb  Reindex_page_of_a_project.ipynb  Retrieve_messages_for_a_conversation.ipynb  SDK_Add_a_FIle_to_project.ipynb  SDK_Create_Bot_By_Sitemap.ipynb  (+21 more)
(+13 files in other folders)
